# computer-use-agent-backend

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agent_engine/: __init__.py  computer_use_adapter.py  mock_agent.py
app/api/: debug_events.py  health.py  history.py  messages.py  schemas.py  sessions.py  streaming.py
app/core/: auth.py  config.py  events.py  locks.py  queue.py  redis.py
app/models/: __init__.py  event.py  message.py  session.py
app/session_runner/: __init__.py  docker_manager.py
app/worker/: runner.py
docker/: Dockerfile.api  Dockerfile.worker  entrypoint.sh
frontend/: index.html
migrations/: env.py
migrations/versions/: 59409ae62377_create_tables.py  e21c7e280b02_create_sessions_messages_events_tables.py
