[project]
name = "computer-use-backend"
version = "0.1.0"
description = "Backend system for Anthropic computer-use demo"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.127.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.uvicorn]
factory = false


# --- Ruff configuration ---
[tool.ruff]
line-length = 88
target-version = "py311"


# Enable common linting rules
[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # bugbear (common bugs)
    "I",   # import sorting
]
ignore = ["B008"]
exclude = [
    "**/.git",
    "**/.ruff_cache",
    "**/.venv",
    "**/__pypackages__",
    "*/migrations/*", 
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"